feat(api): add native token endpoint
